--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
         doc.setFontSize(11);
         doc.text("------------------------------------------------------------", 20, 100);
-        doc.text("Gracias por tu generoso apoyo. Cada peso salva vidas.
-Zacualpan y pueblos vecinos te lo agradecen.", 20, 110);
+        doc.text("Gracias por tu generoso apoyo. Cada peso salva vidas.", 20, 110);
+        doc.text("Zacualpan y pueblos vecinos te lo agradecen.", 20, 117);
 
         doc.save(folioTexto + "_" + nombre.replace(/\s+/g, "_") + ".pdf");
 
