--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
       const logo = new Image();
       logo.crossOrigin = "anonymous";
-      logo.src = "https://i.ibb.co/xhMxkxJ/logo-patronato.jpg";
+      logo.src = "https://github.com/manuelstaz/proteccion-civil-zacualpan/blob/main/patronato%20logo.JPG?raw=true";
 
       logo.onload = () => {
         doc.addImage(logo, "JPEG", 150, 10, 40, 20);
